--- a/index.html
+++ b/index.html
@@ -7,6 +7,46 @@
     <title>Book Tracker</title>
   </head>
   <body>
+    <div class="container">
+      <div class="form-container">
+        <div class="input-field-container">
+          <label for="bookName">Book Name</label>
+          <input type="text" id="bookName" />
+        </div>
+        <div class="input-field-container">
+          <label for="author">Author</label>
+          <input type="text" id="author" />
+        </div>
+        <div class="input-field-container">
+          <label for="pages">No of Pages</label>
+          <input type="number" id="pages" />
+        </div>
+        <div class="input-field-container">
+          <label for="status">Status</label>
+          <select id="status">
+            <option value="Plan to read">Plan to Read</option>
+            <option value="Reading">Reading</option>
+            <option value="Finished Reading">Finished Reading</option>
+          </select>
+        </div>
+
+        <div class="submit-container">
+          <button class="submit-btn">Add Book</button>
+        </div>
+      </div>
+
+      <div class="table-container">
+        <table class="table-el">
+          <tr>
+            <th>Book Name</th>
+            <th>Author</th>
+            <th>Pages</th>
+            <th>Status</th>
+            <th></th>
+          </tr>
+        </table>
+      </div>
+    </div>
     <script src="scripts/main.js" type="module"></script>
   </body>
 </html>
